--- a/DLnotebook2.ipynb
+++ b/DLnotebook2.ipynb
@@ -496,7 +496,7 @@
         "- For each timestep $t$:\n",
         "  - We pass the encoder's output and the previous hidden state $h_{t-1}$ through an Attention Layer. We recall that the flattened encoder output has shape (batch_size, 14$\\times$14, 2048), and decoder's previous hidden state has shape (batch_size, decoder_dim). These elements are both projected onto a space of dimension `attention_dim` thanks to a fully connected. It gives us features of respective shapes (batch_size, 14$\\times$14, attention_dim) and (batch_size, attention_dim). These features are additioned, passed through a feedforward+softmax, which leads to an output shape of (batch_size, num_pixels) for the attention weights. We also apply these attention weights to the encoder output by multiplying them and summing on the `num_pixels` dimension, which leads to another output of shape (batch_size, encoder_dim). The outputs of the attention layer have shapes (batch_size, num_pixels) for the $\\alpha^{<\\tau,t>}$ (mathematical notation of the attention weights in our report), and (batch_size, encoder_dim) for the encoder output with applied weights.\n",
         "  - we apply an LSTM cell which has the following inputs:\n",
-        "    - Input at time $t$: concatenated attention weighted encided image+word at time $t$ (**see figure above**).\n",
+        "    - Input at time $t$: concatenated attention weighted encoded image+word at time $t$ (**see figure above**).\n",
         "    - Previous hidden and cell states $h_{t-1}$ and $c_{t-1}$.\n",
         "\n",
         "    we then retrieve the next hidden state $h_t$ and cell state $c_t$.\n",
