--- a/DLnotebook1.ipynb
+++ b/DLnotebook1.ipynb
@@ -1205,11 +1205,11 @@
       "source": [
         "The training loop is pretty simple. We use the DataLoader functionality of PyTorch to automatically generate batches of data (https://pytorch.org/docs/stable/data.html). We use it for the training and validation data. The loop is designed as follows:\n",
         "- For each epoch:\n",
-        "  - we retrieve a batch of images/captions sets.\n",
-        "  - we pass the images through the CNN Encoder.\n",
-        "  - we pass the Encoder output and the ground-truth captions through the Decoder. We recall that the Decoder initialize the RNN with the projected convolved image on the space of dimension `decoder_dim`, and then decodes at each timestep using the previous hidden state. Decoder output has shape (batch_size, max_sequence_len, vocab_size).\n",
-        "  - we compute the loss between the obtained scores over the vocabulary for each word, and the target sentence. \n",
-        "  - we perform backprop and update the weights.\n"
+        "  - We retrieve a batch of images/captions sets.\n",
+        "  - We pass the images through the CNN Encoder.\n",
+        "  - We pass the Encoder output and the ground-truth captions through the Decoder. We recall that the Decoder initialize the RNN with the projected convolved image on the space of dimension `decoder_dim`, and then decodes at each timestep using the previous hidden state. Decoder output has shape (batch_size, max_sequence_len, vocab_size).\n",
+        "  - We compute the loss between the obtained scores over the vocabulary for each word, and the target sentence. \n",
+        "  - We perform backprop and update the weights.\n"
       ]
     },
     {
