--- a/DLnotebook1.ipynb
+++ b/DLnotebook1.ipynb
@@ -313,7 +313,7 @@
         "\n",
         "For the first part, most of the code has been designed by us, be it for the model, the training loop or evaluation loop. Our model is a pretrained CNN encoder and a Gated Recurrent Unit decoder, without visual attention. For the second part, which is a way more complex part, the code is adapted and reshaped from other original implementations of the paper. It contains all optimization and model nuances that are presented in the paper: a decaying learning rate, a doubly stochastic regularized loss, and an attention mechanism with LSTM decoder. In this notebook, we only focus on the first part.\n",
         "\n",
-        "We led our experiments on the COCO Dataset, which is a famous dataset for computer vision tasks. COCO stands for Common Object in Contexts, and the data consists of 100,000 images of multiple kinds of situations. Our problematic needs us to retrieve captions of those images in order to predict them. Such captions are also available on the cocodataset website, as `annotations` file. \n",
+        "We led our experiments on the COCO Dataset, which is a famous dataset for computer vision tasks (https://arxiv.org/abs/1405.0312). COCO stands for Common Object in Context, and the data consists of 100,000+ images of multiple kinds of situations. We use the 2017 version of the dataset, which contains a train/validation split of 118K/5K annotated images. Our problematic needs us to retrieve captions of those images in order to predict them. Such captions are also available on the cocodataset website, as `annotations` file. \n",
         "\n",
         "##Notebook story line:\n",
         "\n",
