--- a/DLnotebook2.ipynb
+++ b/DLnotebook2.ipynb
@@ -2429,7 +2429,7 @@
         "id": "XQCGUXTkNDlm"
       },
       "source": [
-        "We can have a look at the attention weights that are computed during training. We recall that in the original paper, the idea of the the visual attention mechanism is that the encoded image, together with the hidden state at each timestep are projected onto a space of dimension equal to `attention_dim` through a feedforward neural network. These projections are additioned, and passed through a final neural network + softmax to obtain an output of size (batch_size, num_pixels), with weighted regions. The following code is retrieved from the repository of the authors' paper."
+        "We can have a look at the attention weights that are computed during training. We recall that in the original paper, the idea of the the visual attention mechanism is that the encoded image, together with the hidden state at each timestep are projected onto a space of dimension equal to `attention_dim` through a feedforward neural network. These projections are additioned, and passed through a final neural network + softmax to obtain an output of size (batch_size, num_pixels), with weighted regions. The following code is retrieved from the repository of the paper's authors."
       ]
     },
     {
