--- a/DLnotebook1.ipynb
+++ b/DLnotebook1.ipynb
@@ -309,7 +309,7 @@
       "source": [
         "Our work is divided into two parts:\n",
         "- $\\underline{\\text{Part I}}$: simple CNN-RNN-based model, in which we propose an approach \"from scratch\", *i.e* **without paper/code inspiration**. \n",
-        "- $\\underline{\\text{Part I}}$: visual attention model, in which we propose an approach based on the paper of Xu et al. : *Show, Attend and Tell: Neural Image Caption Generation with Visual Attention* (https://arxiv.org/pdf/1502.03044.pdf).\n",
+        "- $\\underline{\\text{Part II}}$: visual attention model, in which we propose an approach based on the paper of Xu et al. : *Show, Attend and Tell: Neural Image Caption Generation with Visual Attention* (https://arxiv.org/pdf/1502.03044.pdf).\n",
         "\n",
         "For the first part, most of the code has been designed by us, be it for the model, the training loop or evaluation loop. Our model is a pretrained CNN encoder and a Gated Recurrent Unit decoder, without visual attention. For the second part, which is a way more complex part, the code is adapted and reshaped from other original implementations of the paper. It contains all optimization and model nuances that are presented in the paper: a decaying learning rate, a doubly stochastic regularized loss, and an attention mechanism with LSTM decoder. In this notebook, we only focus on the first part.\n",
         "\n",
